tests/ui/resolve/impl-trait-for-undeclared-type.stderr
error[E0425]: cannot find type `DecoderError` in this scope
  --> $DIR/impl-trait-for-undeclared-type.rs:6:23
   |
LL | impl fmt::Display for DecoderError {
   |                       ^^^^^^^^^^^^ not found in this scope

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0425`.
